@@ -51,52 +51,6 @@ private:
   void read_ds_data() const;
 };
 
-
-
-// ===============================================================
-//      UsbUsd::DataV1 schema version 0
-// ===============================================================
-namespace ns_DataV1_v1 {
-struct dataset_data {
-  static hdf5pp::Type native_type();
-  static hdf5pp::Type stored_type();
-
-  dataset_data();
-  ~dataset_data();
-
-  int32_t e_count[4];
-  uint16_t analog_in[4];
-  uint32_t timestamp;
-  uint8_t digital_in;
-
-};
-}
-
-
-class DataV1_v1 : public Psana::UsdUsb::DataV1 {
-public:
-  typedef Psana::UsdUsb::DataV1 PsanaType;
-  DataV1_v1() {}
-  DataV1_v1(hdf5pp::Group group, hsize_t idx)
-    : m_group(group), m_idx(idx) {}
-  DataV1_v1(const boost::shared_ptr<UsdUsb::ns_DataV1_v1::dataset_data>& ds) : m_ds_data(ds) {}
-  virtual ~DataV1_v1() {}
-  virtual uint8_t digital_in() const;
-  virtual uint32_t timestamp() const;
-  virtual ndarray<const uint8_t, 1> status() const;
-
-  virtual ndarray<const uint16_t, 1> analog_in() const;
-  /** Return lower 24 bits of _count array as signed integer values. */
-  ndarray<const int32_t, 1> encoder_count() const;
-
-private:
-  mutable hdf5pp::Group m_group;
-  hsize_t m_idx;
-  mutable boost::shared_ptr<UsdUsb::ns_DataV1_v1::dataset_data> m_ds_data;
-  void read_ds_data() const;
-};
-
-
 } // namespace UsdUsb
 } // namespace psddl_hdf2psana
 
